# Solar_System_orbits_simulation

./: .gitignore  CMakeLists.txt  README  build.sh  main.c
data/Planets_NASA/: Solar_system_bodies.csv  Solar_system_bodies.txt  data_extract.py  horizons_results_earth.txt  horizons_results_jupiter.txt  horizons_results_mars.txt  horizons_results_mercury.txt  horizons_results_neptune.txt  horizons_results_pluto.txt  horizons_results_saturn.txt  horizons_results_sun.txt  horizons_results_uranus.txt  horizons_results_venus.txt
data/Planets_NASA/Satallites_and_small_objects/: horizons_results_ganymede.txt
lib/: CMakeLists.txt  Hamiltonian.c  Hamiltonian.h  NASA_data.c  NASA_data.h  Other_Numerical_Integration_methods.c  Other_Numerical_Integration_methods.h  Runge_Kutta_second_order.c  Runge_Kutta_second_order.h  Stellar_body_struct.h  Vector_operations.c  Vector_operations.h
python_visualization/: Graphs_of_system_variables.py  orbits_plots.py  visualise.py  visualise_second_version.py
