add_library(Hamiltonian Hamiltonian.c Other_Numerical_Integration_methods.c Other_Numerical_Integration_methods.h)
add_library(Runge_Kutta Runge_Kutta_second_order.c)
add_library(NASA_data NASA_data.c)
add_library(Other_integration Other_Numerical_Integration_methods.c)
#add_library(Stellar_body_struct.h INTERFACE)
add_library(Vector_operations Vector_operations.c)